app/components/infinite-table/infinite_table.css
.InfiniteTable {
    position: relative;
    width: 100%;
    height: 100%;
}


/* –––– ACTIONS –––– */

.InfiniteTable
.action-bar {
    display: flex;
    align-items: center;
    margin-bottom: 15px;
}

.InfiniteTable
.action-bar .spacer {
    margin-left: 15px;
}

.InfiniteTable
.action-bar .action-item
button {
    min-width: 200px;
    box-sizing: border-box;
    margin-bottom: 0px;
}

.InfiniteTable
.action-bar
.search-bar {
    position: relative;
    width: 100%;
}

.InfiniteTable
.action-bar .search-bar
input {
    position: relative;
    left: -12px;
    width: calc(100% - 24px);
    box-sizing: border-box;
    margin-bottom: 0;
}

.InfiniteTable
.search-bar .search-icon {
    position: absolute;
    top: 0; right: 0;

    height: 38px; width: 24px;
    line-height: 38px;
    text-align: center;

    box-sizing: border-box;
    border-bottom: 1px solid #D1D1D1;
    cursor: pointer;
    color: #D1D1D1;
}

.InfiniteTable
input:focus + .search-icon {
    color: #33C3F0;
    border-color: #33C3F0;
}


/* –––– TABLE –––– */

.InfiniteTable
table {
    width: 100%;
    margin-bottom: 1.5rem;
}

.InfiniteTable
table tbody {
    display: block;
    overflow: auto;
    width: 100%;
    /*height: 150px; Height applied dynamically in js*/
}

.InfiniteTable
table tr {
    display: table;
    width: 100%;
    table-layout: fixed;
}

.InfiniteTable
table tr td {
    overflow: auto;
    padding: 10px 15px;
}

.InfiniteTable
table tr td:first-child {
    padding-left: 0;
}

.InfiniteTable
table tr td:last-child {
    padding-right: 0;
}

.InfiniteTable
table tr td::-webkit-scrollbar {
    display: none;
}

.InfiniteTable
table
tr:nth-child(even) {
    background-color: #FCFCFC;
}

.InfiniteTable
table
tr.clickable:hover {
    background-color: #EDF9FF;
}

.InfiniteTable
td
span.empty {
    text-align: center;
    display: inline-block;
    width: 100%;
}

.InfiniteTable
.lnr {
    display: inline-block;
    width: 100%;
    text-align: center;
    font-weight: bold;
}

.InfiniteTable
span.lnr.lnr-checkmark-circle {
    color: #1EAEDB;
}

.InfiniteTable
span.lnr.lnr-cross-circle {
    color: #A0A0A0;
}

